# KotlinPredicate

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kotlin/predicate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kotlin/predicate/: MainActivity.kt
app/src/main/res/color/: bottom_selector.xml
app/src/main/res/drawable/: bar_color.xml  bg_welcome_count_down.xml  button_main_selected.xml  button_main_unselected.xml  change_member_bg.xml  cycle_selected.xml  cycle_unselected.xml  dialog_bg.xml  my_class_bg.xml  progress_bar_background.xml  shape_progressbar_progress.xml
app/src/main/res/layout/: activity_position.xml  add_user_info_fragment.xml  dialog_common_message.xml  home_child_fragment.xml  home_fragment.xml  include_my_sport_level.xml  include_toolbar.xml  include_upper_part_background.xml  item_home_child.xml  layout_custom_progress_dialog_view.xml  login_activity.xml  login_with_code_fragment.xml  login_with_password_fragment.xml  main_activity.xml  main_fragment.xml  my_fragment.xml  select_role_fragment.xml  setting_center_fragment.xml  welcome_activity.xml
app/src/main/res/menu/: main_bottom_navigation.xml  my_tool_bar.xml
app/src/main/res/navigation/: login_navigation.xml  main_navigation.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kotlin/predicate/: ExampleUnitTest.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/java/: Dependencies.kt
gradle/wrapper/: gradle-wrapper.properties
mvvmcore/: build.gradle  readme.md
mvvmcore/src/androidTest/java/com/mvvm/core/: ExampleInstrumentedTest.kt
mvvmcore/src/main/: AndroidManifest.xml
mvvmcore/src/test/java/com/mvvm/core/: ExampleUnitTest.kt
nativelib/: build.gradle
nativelib/src/androidTest/java/com/zjuici/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  jni_interface.cpp  posenet.cpp  posenet.h  sport.cpp  sport.h
nativelib/src/main/cpp/mnn/include/MNN/: AutoTime.hpp  ImageProcess.hpp  Interpreter.hpp  MNNDefine.h  MNNForwardType.h  MNNSharedContext.h  Tensor.hpp
nativelib/src/main/cpp/mnn/include/MNN/expr/: Executor.hpp  Expr.hpp  MathOp.hpp  Module.hpp  NeuralNetWorkOp.hpp
nativelib/src/main/java/com/zjuici/nativelib/: SportAi.java  SportApiType.java  SportPoint.java
nativelib/src/main/res/drawable/: cpu_gpu_bg.xml
nativelib/src/main/res/values/: colors.xml  strings.xml
uicore/: build.gradle  readme.md
uicore/src/main/: AndroidManifest.xml
uicore/src/main/res/layout/: layout_icon_image.xml  layout_image_from_item.xml  layout_input_from_item.xml  layout_phone_input.xml  layout_verification_code.xml
uicore/src/main/res/values/: colors.xml  dimens.xml  styles.xml
(+140 files in other folders)
